# gato

./: .gatoignore  Cargo.toml  README.md  flake.nix  gato.toml  result
.gato/: config.toml  index
.gato/refs/heads/: chunks  master  test  zstd
src/: main.rs
src/add/: index.rs  mod.rs
src/add/chunker/: mod.rs
src/cli/: api.rs  mod.rs
src/commit/: blob.rs  error.rs  mod.rs
src/config/: load.rs  mod.rs
src/core/: error.rs  mod.rs
src/core/add/: index.rs  mod.rs
src/core/add/chunker/: mod.rs
src/core/cli/: cli.rs  mod.rs
src/core/commit/: blob.rs  error.rs  mod.rs
src/core/config/: load.rs  mod.rs
src/core/init/: config.toml  gato.toml  mod.rs
src/core/storage/: local.rs  mod.rs  status.rs
src/core/storage/gc/: mod.rs
src/core/vfs/: error.rs  mod.rs  models.rs
src/init/: gato.toml  lib.rs  mod.rs
src/storage/: local.rs  mod.rs
tests/: integration.rs
