[package]
name = "gato"
version = "0.3.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
blake3 = "1.8.2"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive", "env"] }

directories = "6.0.0"
fastcdc = "3.2.1"
flate2 = { version = "1.1.5", features = ["zlib"] }
hex = "0.4.3"
memmap2 = "0.9.9"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.10"
uuid = { version = "1.19.0", features = ["v7"] }
zstd = "0.13.3"
