[package]
name = "gato"
version = "0.5.0"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["Omar <omar238sh@gmail.com>"]
description = "A High-Performance, Parallelized Version Control System"

[dependencies]
# shared = {path="../shared"}
blake3 = "1.8.2"
chrono = "0.4.42"
fastcdc = "3.2.1"
flate2 = { version = "1.1.5", features = ["zlib"] }
hex = "0.4.3"
memmap2 = "0.9.9"
rayon = "1.11.0"
toml = "0.9.10"
uuid = { version = "1.19.0", features = ["v7"] }
zstd = "0.13.3"
bincode = {version = "2.0.1"}
directories = {version = "6.0.0"}
thiserror = "2.0.17"
serde = {version = "1.0.228" , features=["derive"]}

clap = { version = "4.5.51", features = ["derive", "env"] }
